src/generated_bindings/volt.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_io_status"][::core::mem::size_of::<nvm_io_status>() - 28usize];
    ["Alignment of nvm_io_status"][::core::mem::align_of::<nvm_io_status>() - 4usize];
    ["Offset of field: nvm_io_status::status"]
        [::core::mem::offset_of!(nvm_io_status, status) - 0usize];
    ["Offset of field: nvm_io_status::nvme_status"]
        [::core::mem::offset_of!(nvm_io_status, nvme_status) - 2usize];
    ["Offset of field: nvm_io_status::pg_errors"]
        [::core::mem::offset_of!(nvm_io_status, pg_errors) - 4usize];
    ["Offset of field: nvm_io_status::total_pgs"]
        [::core::mem::offset_of!(nvm_io_status, total_pgs) - 8usize];
    ["Offset of field: nvm_io_status::pgs_p"]
        [::core::mem::offset_of!(nvm_io_status, pgs_p) - 12usize];
    ["Offset of field: nvm_io_status::pgs_s"]
        [::core::mem::offset_of!(nvm_io_status, pgs_s) - 14usize];
    ["Offset of field: nvm_io_status::ret_t"]
        [::core::mem::offset_of!(nvm_io_status, ret_t) - 16usize];
    ["Offset of field: nvm_io_status::pg_map"]
        [::core::mem::offset_of!(nvm_io_status, pg_map) - 18usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct nvm_mmgr_io_cmd {
    pub nvm_io: *mut nvm_io_cmd,
    pub ppa: nvm_ppa_addr,
    pub ch: *mut nvm_channel,
    pub callback: nvm_callback,
    pub prp: [u64; 32usize],
    pub md_prp: u64,
    pub status: u8,
    pub cmdtype: u8,
    pub pg_index: u32,
    pub pg_sz: u32,
    pub n_sectors: u16,
    pub sec_sz: u32,
    pub md_sz: u32,
    pub sec_offset: u16,
    pub force_sync_md: u8,
    pub force_sync_data: [u8; 32usize],
    pub sync_count: u32,
    pub rsvd: [u8; 128usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_mmgr_io_cmd"][::core::mem::size_of::<nvm_mmgr_io_cmd>() - 504usize];
    ["Alignment of nvm_mmgr_io_cmd"][::core::mem::align_of::<nvm_mmgr_io_cmd>() - 8usize];
    ["Offset of field: nvm_mmgr_io_cmd::nvm_io"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, nvm_io) - 0usize];
    ["Offset of field: nvm_mmgr_io_cmd::ppa"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, ppa) - 8usize];
    ["Offset of field: nvm_mmgr_io_cmd::ch"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, ch) - 16usize];
    ["Offset of field: nvm_mmgr_io_cmd::callback"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, callback) - 24usize];
    ["Offset of field: nvm_mmgr_io_cmd::prp"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, prp) - 48usize];
    ["Offset of field: nvm_mmgr_io_cmd::md_prp"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, md_prp) - 304usize];
    ["Offset of field: nvm_mmgr_io_cmd::status"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, status) - 312usize];
    ["Offset of field: nvm_mmgr_io_cmd::cmdtype"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, cmdtype) - 313usize];
    ["Offset of field: nvm_mmgr_io_cmd::pg_index"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, pg_index) - 316usize];
    ["Offset of field: nvm_mmgr_io_cmd::pg_sz"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, pg_sz) - 320usize];
    ["Offset of field: nvm_mmgr_io_cmd::n_sectors"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, n_sectors) - 324usize];
    ["Offset of field: nvm_mmgr_io_cmd::sec_sz"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, sec_sz) - 328usize];
    ["Offset of field: nvm_mmgr_io_cmd::md_sz"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, md_sz) - 332usize];
    ["Offset of field: nvm_mmgr_io_cmd::sec_offset"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, sec_offset) - 336usize];
    ["Offset of field: nvm_mmgr_io_cmd::force_sync_md"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, force_sync_md) - 338usize];
    ["Offset of field: nvm_mmgr_io_cmd::force_sync_data"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, force_sync_data) - 339usize];
    ["Offset of field: nvm_mmgr_io_cmd::sync_count"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, sync_count) - 372usize];
    ["Offset of field: nvm_mmgr_io_cmd::rsvd"]
        [::core::mem::offset_of!(nvm_mmgr_io_cmd, rsvd) - 376usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct nvm_io_cmd {
    pub cid: u64,
    pub channel: [*mut nvm_channel; 64usize],
    pub ppalist: [nvm_ppa_addr; 256usize],
    pub status: nvm_io_status,
    pub mmgr_io: [nvm_mmgr_io_cmd; 64usize],
    pub callback: nvm_callback,
    pub req: *mut ::core::ffi::c_void,
    pub mq_req: *mut ::core::ffi::c_void,
    pub opaque: *mut ::core::ffi::c_void,
    pub prp: [u64; 256usize],
    pub md_prp: [u64; 256usize],
    pub sec_sz: u32,
    pub md_sz: u32,
    pub n_sec: u32,
    pub slba: u64,
    pub cmdtype: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_io_cmd"][::core::mem::size_of::<nvm_io_cmd>() - 39032usize];
    ["Alignment of nvm_io_cmd"][::core::mem::align_of::<nvm_io_cmd>() - 8usize];
    ["Offset of field: nvm_io_cmd::cid"][::core::mem::offset_of!(nvm_io_cmd, cid) - 0usize];
    ["Offset of field: nvm_io_cmd::channel"][::core::mem::offset_of!(nvm_io_cmd, channel) - 8usize];
    ["Offset of field: nvm_io_cmd::ppalist"]
        [::core::mem::offset_of!(nvm_io_cmd, ppalist) - 520usize];
    ["Offset of field: nvm_io_cmd::status"]
        [::core::mem::offset_of!(nvm_io_cmd, status) - 2568usize];
    ["Offset of field: nvm_io_cmd::mmgr_io"]
        [::core::mem::offset_of!(nvm_io_cmd, mmgr_io) - 2600usize];
    ["Offset of field: nvm_io_cmd::callback"]
        [::core::mem::offset_of!(nvm_io_cmd, callback) - 34856usize];
    ["Offset of field: nvm_io_cmd::req"][::core::mem::offset_of!(nvm_io_cmd, req) - 34880usize];
    ["Offset of field: nvm_io_cmd::mq_req"]
        [::core::mem::offset_of!(nvm_io_cmd, mq_req) - 34888usize];
    ["Offset of field: nvm_io_cmd::opaque"]
        [::core::mem::offset_of!(nvm_io_cmd, opaque) - 34896usize];
    ["Offset of field: nvm_io_cmd::prp"][::core::mem::offset_of!(nvm_io_cmd, prp) - 34904usize];
    ["Offset of field: nvm_io_cmd::md_prp"]
        [::core::mem::offset_of!(nvm_io_cmd, md_prp) - 36952usize];
    ["Offset of field: nvm_io_cmd::sec_sz"]
        [::core::mem::offset_of!(nvm_io_cmd, sec_sz) - 39000usize];
    ["Offset of field: nvm_io_cmd::md_sz"][::core::mem::offset_of!(nvm_io_cmd, md_sz) - 39004usize];
    ["Offset of field: nvm_io_cmd::n_sec"][::core::mem::offset_of!(nvm_io_cmd, n_sec) - 39008usize];
    ["Offset of field: nvm_io_cmd::slba"][::core::mem::offset_of!(nvm_io_cmd, slba) - 39016usize];
    ["Offset of field: nvm_io_cmd::cmdtype"]
        [::core::mem::offset_of!(nvm_io_cmd, cmdtype) - 39024usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_mmgr_geometry {
    pub n_of_ch: u8,
    pub lun_per_ch: u8,
    pub blk_per_lun: u16,
    pub pg_per_blk: u16,
    pub sec_per_pg: u16,
    pub n_of_planes: u8,
    pub pg_size: u32,
    pub sec_oob_sz: u32,
    pub sec_per_pl_pg: u32,
    pub sec_per_blk: u32,
    pub sec_per_lun: u32,
    pub sec_per_ch: u32,
    pub pg_per_lun: u32,
    pub pg_per_ch: u32,
    pub blk_per_ch: u32,
    pub tot_sec: u64,
    pub tot_pg: u64,
    pub tot_blk: u32,
    pub tot_lun: u32,
    pub sec_size: u32,
    pub pl_pg_size: u32,
    pub blk_size: u32,
    pub lun_size: u64,
    pub ch_size: u64,
    pub tot_size: u64,
    pub pg_oob_sz: u32,
    pub pl_pg_oob_sz: u32,
    pub blk_oob_sz: u32,
    pub lun_oob_sz: u32,
    pub ch_oob_sz: u64,
    pub tot_oob_sz: u64,
}
